--- a/mz-modules/mz-system/system-provider/pom.xml
+++ b/mz-modules/mz-system/system-provider/pom.xml
@@ -16,6 +16,13 @@
     </parent>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.mz.system.model</groupId>
+            <artifactId>system-model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
