--- a/mz-modules/mz-system/mz-system-provider/pom.xml
+++ b/mz-modules/mz-system/mz-system-provider/pom.xml
@@ -2,18 +2,43 @@
 <project xmlns = "http://maven.apache.org/POM/4.0.0" xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mz.system.api</groupId>
-    <artifactId>system-api</artifactId>
+    <groupId>com.mz.system.provider</groupId>
+    <artifactId>mz-system-provider</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>system-api</name>
+    <name>mz-system-provider</name>
     <packaging>jar</packaging>
-    <description>system api 远程调用模块</description>
+    <description>system 业务模块</description>
 
     <parent>
         <artifactId>mz-system</artifactId>
         <groupId>com.mz.system</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.mz.system.model</groupId>
+            <artifactId>mz-system-model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -31,6 +56,9 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.3.7.RELEASE</version>
+                <configuration>
+                    <mainClass>com.mz.system.provider.MzSystemProviderApplication</mainClass>
+                </configuration>
                 <executions>
                     <execution>
                         <id>repackage</id>
