--- a/mz-modules/mz-system/pom.xml
+++ b/mz-modules/mz-system/pom.xml
@@ -16,9 +16,9 @@
     </parent>
 
     <modules>
-        <module>system-api</module>
-        <module>system-model</module>
-        <module>system-provider</module>
+        <module>mz-system-api</module>
+        <module>mz-system-model</module>
+        <module>mz-system-provider</module>
     </modules>
 
     <description>MZ系统业务模块</description>
