fix(mz-cloud):spring-boot-starter-test依赖添加版本

--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <scope>test</scope>
+                <version>${spring-boot.version}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.junit.vintage</groupId>
