feat(mz-common):父pom添加子模块（mz-common-core）

--- a/mz-common/pom.xml
+++ b/mz-common/pom.xml
@@ -14,4 +14,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
+    <modules>
+        <module>mz-common-core</module>
+    </modules>
 </project>
