fix(mz-common):修复编译失败 父pom添加打包类型

--- a/mz-common/pom.xml
+++ b/mz-common/pom.xml
@@ -6,6 +6,7 @@
     <artifactId>mz-common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mz-common</name>
+    <packaging>pom</packaging>
     <description>MZ微服务系统公共模块</description>
 
     <parent>
