--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <mybatis-plus.version>3.4.2</mybatis-plus.version>
         <commons-io.version>2.10.0</commons-io.version>
         <commons-fileupload.version>1.3.2</commons-fileupload.version>
+        <commons.lang.version>3.12.0</commons.lang.version>
         <kaptcha.version>2.3.2</kaptcha.version>
         <poi.version>4.1.2</poi.version>
         <druid-spring.version>1.2.3</druid-spring.version>
@@ -29,6 +30,9 @@
         <jna.version>5.9.0</jna.version>
         <springfox.version>3.0.0</springfox.version>
         <servlet.version>4.0.1</servlet.version>
+        <swagger-annotations.version>1.5.20</swagger-annotations.version>
+        <swagger-ui.version>1.9.6</swagger-ui.version>
+        <guava.version>29.0-jre</guava.version>
     </properties>
 
     <modules>
@@ -86,6 +90,11 @@
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons.lang.version}</version>
+            </dependency>
             <!-- 文件上传工具类 -->
             <dependency>
                 <groupId>commons-fileupload</groupId>
@@ -109,6 +118,18 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-boot-starter</artifactId>
                 <version>${springfox.version}</version>
+            </dependency>
+            <!--swagger 注解依赖-->
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${swagger-annotations.version}</version>
+            </dependency>
+            <!--swagger-ui  这里是用了一个好看一点ui界面-->
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>swagger-bootstrap-ui</artifactId>
+                <version>${swagger-ui.version}</version>
             </dependency>
             <!--Token生成与解析-->
             <dependency>
@@ -138,6 +159,12 @@
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
 
             <dependency>
