feat(mz-common):新增mz-common-swagger模块依赖

--- a/mz-common/pom.xml
+++ b/mz-common/pom.xml
@@ -18,5 +18,6 @@
     <modules>
         <module>mz-common-core</module>
         <module>mz-common-redis</module>
+        <module>mz-common-swagger</module>
     </modules>
 </project>
