--- a/mz-gateway/mz-gateway-provider/pom.xml
+++ b/mz-gateway/mz-gateway-provider/pom.xml
@@ -49,8 +49,15 @@
         </dependency>
 
         <dependency>
+            <groupId>com.mz.common.redis</groupId>
+            <artifactId>mz-common-redis</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springfox.version}</version>
         </dependency>
 
         <dependency>
