feat(mz-auth):添加认证中心模块，初步进行搭建

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>mz-modules</module>
         <module>mz-common</module>
         <module>mz-gateway</module>
+        <module>mz-auth</module>
     </modules>
 
     <dependencyManagement>
