feat(mz-system-provider):集成资源安全模块依赖

--- a/mz-modules/mz-system/mz-system-provider/pom.xml
+++ b/mz-modules/mz-system/mz-system-provider/pom.xml
@@ -24,7 +24,13 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mz.common.security</groupId>
+            <artifactId>mz-common-security</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
