--- a/mz-common/mz-common-swagger/pom.xml
+++ b/mz-common/mz-common-swagger/pom.xml
@@ -17,9 +17,16 @@
 
     <dependencies>
         <!--swagger-ui  这里是用了一个好看一点ui界面-->
-        <dependency>
+        <!--<dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>swagger-bootstrap-ui</artifactId>
+        </dependency>-->
+
+        <!--对Api文档增强-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-micro-spring-boot-starter</artifactId>
+            <version>2.0.3</version>
         </dependency>
 
         <!--swagger-->
