feat(mz-system-provider):集成Nacos

--- a/mz-modules/mz-system/mz-system-provider/pom.xml
+++ b/mz-modules/mz-system/mz-system-provider/pom.xml
@@ -28,6 +28,16 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.mz.common.security</groupId>
             <artifactId>mz-common-security</artifactId>
             <version>0.0.1-SNAPSHOT</version>
