--- a/mz-common/mz-common-core/pom.xml
+++ b/mz-common/mz-common-core/pom.xml
@@ -62,8 +62,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+        </dependency>
     </dependencies>
-
-
 
 </project>
