--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <swagger-annotations.version>1.5.20</swagger-annotations.version>
         <swagger-ui.version>1.9.6</swagger-ui.version>
         <guava.version>29.0-jre</guava.version>
+        <minio.version>7.1.0</minio.version>
+        <dynamic-datasource.version>3.5.0</dynamic-datasource.version>
     </properties>
 
     <modules>
@@ -84,6 +86,21 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-annotation</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-extension</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+                <version>${dynamic-datasource.version}</version>
             </dependency>
             <!-- io常用工具类 -->
             <dependency>
@@ -184,6 +201,12 @@
                 <groupId>net.java.dev.jna</groupId>
                 <artifactId>jna-platform</artifactId>
                 <version>${jna.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.minio</groupId>
+                <artifactId>minio</artifactId>
+                <version>${minio.version}</version>
             </dependency>
 
             <dependency>
