fix(mz-sentinel-dashboard): 修改前端package.json name名称

--- a/mz-sentinel-dashboard/src/main/webapp/resources/package.json
+++ b/mz-sentinel-dashboard/src/main/webapp/resources/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sentinel-dashboard",
+  "name": "mz-sentinel-dashboard",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
