fix(mz-common-core): 新增 Feign统一异常 HttpConfig默认超时时间 http请求工具类 Bean工具类

--- a/mz-common/mz-common-core/pom.xml
+++ b/mz-common/mz-common-core/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>aspectjweaver</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-core</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
