feat(mz-common): POM添加mz-common-feign mz-common-sentinel

--- a/mz-common/pom.xml
+++ b/mz-common/pom.xml
@@ -21,5 +21,7 @@
         <module>mz-common-swagger</module>
         <module>mz-common-security</module>
         <module>mz-common-mybatis</module>
+        <module>mz-common-feign</module>
+        <module>mz-common-sentinel</module>
     </modules>
 </project>
