fix(mz-common-sentinel): sentinel 日志打印默认改为输出到文件

--- a/mz-common/mz-common-sentinel/src/main/resources/sentinel.properties
+++ b/mz-common/mz-common-sentinel/src/main/resources/sentinel.properties
@@ -2,7 +2,7 @@
 csp.sentinel.log.dir=logs/csp
 csp.sentinel.log.use.pid=false
 #日志输出到文件还是控制台 file表示文件，console表示控制台
-csp.sentinel.log.output.type=console
+csp.sentinel.log.output.type=file
 #50M
 csp.sentinel.metric.file.single.size=52428800
 #日志文件个数
