--- a/mz-modules/mz-system/mz-system-provider/pom.xml
+++ b/mz-modules/mz-system/mz-system-provider/pom.xml
@@ -23,6 +23,27 @@
         </dependency>
 
         <dependency>
+            <groupId>com.mz.common.mybatis</groupId>
+            <artifactId>mz-common-mybatis</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
