--- a/mz-common/mz-common-security/pom.xml
+++ b/mz-common/mz-common-security/pom.xml
@@ -34,5 +34,9 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 </project>
