feat(mz-system-provider): 添加端口号

--- a/mz-modules/mz-system/mz-system-provider/src/main/resources/bootstrap-dev.yml
+++ b/mz-modules/mz-system/mz-system-provider/src/main/resources/bootstrap-dev.yml
@@ -8,3 +8,5 @@ spring:
         file-extension: yml
         shared-configs:
           - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+server:
+  port: 9100
