feat(mz-auth): 添加修改内容 1.Jwt加密 （配置文件中配置是否开启） 2.RSA加密接口（JWT加密方式提供者） 3.继承AbstractTokenGranter，实现自己的MzAbstractTokenGranter，提供多方式登录 3.自定义客户端登录方式WxUserPasswdTokenGranter 4.修改Mz Web 响应异常翻译器

--- a/mz-auth/src/main/resources/bootstrap-dev.yml
+++ b/mz-auth/src/main/resources/bootstrap-dev.yml
@@ -8,3 +8,6 @@ spring:
         file-extension: yml
         shared-configs:
           - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+mz:
+  token:
+    is-jwt-token-enhance: false
