fix(mz-common-security): 解决历史问题，新增功能 1.解决User 无法转为 MzSysUserSecurity 2.使用Jackson2作为Token存放Redis的默认序列化 3.自定义登录方式

--- a/mz-common/mz-common-security/pom.xml
+++ b/mz-common/mz-common-security/pom.xml
@@ -38,5 +38,18 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+
+
+        <!--JWT支持-->
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>9.24.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
     </dependencies>
 </project>
