--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
         <spring-cloud-alibaba.version>2.2.2.RELEASE</spring-cloud-alibaba.version>
         <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
-        <fastjson.version>1.2.72</fastjson.version>
+        <fastjson.version>2.0.14</fastjson.version>
         <mybatis-plus.version>3.4.2</mybatis-plus.version>
         <commons-io.version>2.10.0</commons-io.version>
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
@@ -255,6 +255,18 @@
                         <!-- TODO 解决maven命令编译报错，因为rt.jar 和jce.jar在jre的lib下面，不在jdk的lib下面，导致maven找不到（java7以后会出现这个问题）-->
                         <bootclasspath>${java.home}\lib\rt.jar;${java.home}\lib\jce.jar</bootclasspath>
                     </compilerArguments>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <!--配置MAVEN过滤JKS等格式的文件-->
+                    <nonFilteredFileExtensions>
+                        <!--<nonFilteredFileExtension>p12</nonFilteredFileExtension>-->
+                        <nonFilteredFileExtension>jks</nonFilteredFileExtension>
+                    </nonFilteredFileExtensions>
                 </configuration>
             </plugin>
         </plugins>
