fix(mz-common-swagger): 使用Swagger3

--- a/mz-common/mz-common-swagger/pom.xml
+++ b/mz-common/mz-common-swagger/pom.xml
@@ -16,17 +16,16 @@
     </parent>
 
     <dependencies>
-        <!--swagger-ui  这里是用了一个好看一点ui界面-->
-        <!--<dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>swagger-bootstrap-ui</artifactId>
-        </dependency>-->
-
-        <!--对Api文档增强-->
         <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-micro-spring-boot-starter</artifactId>
-            <version>2.0.3</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <!--swagger-->
@@ -49,6 +48,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-context</artifactId>
         </dependency>
 
     </dependencies>
