--- a/mz-common/mz-common-core/pom.xml
+++ b/mz-common/mz-common-core/pom.xml
@@ -76,6 +76,10 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
 
     </dependencies>
 
