feat(mz-common-redis):使用redisson分布式锁，自定义注解锁

--- a/mz-common/mz-common-redis/pom.xml
+++ b/mz-common/mz-common-redis/pom.xml
@@ -25,6 +25,19 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.17.2</version>
+        </dependency>
     </dependencies>
 
 </project>
