fix(mz-auth):格式化令牌返回，使用公共加密模块

--- a/mz-auth/src/main/resources/bootstrap-dev.yml
+++ b/mz-auth/src/main/resources/bootstrap-dev.yml
@@ -3,6 +3,8 @@ spring:
     nacos:
       discovery:
         server-addr: ${NACOS_HOST:192.168.56.2}:8848
+        metadata:
+          env: dev
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         file-extension: yml
