--- a/mz-modules/mz-system/mz-system-provider/src/main/resources/bootstrap-dev.yml
+++ b/mz-modules/mz-system/mz-system-provider/src/main/resources/bootstrap-dev.yml
@@ -3,6 +3,8 @@ spring:
     nacos:
       discovery:
         server-addr: ${NACOS_HOST:192.168.56.2}:8848
+        metadata:
+          env: dev
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         file-extension: yml
