feat(mz-common-mybatis): 添加Mybatis参数解析日志格式化插件

--- a/mz-common/mz-common-mybatis/pom.xml
+++ b/mz-common/mz-common-mybatis/pom.xml
@@ -59,6 +59,13 @@
             <artifactId>javax.servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.mz.common.core</groupId>
+            <artifactId>mz-common-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
