--- a/mz-common/mz-common-redis/pom.xml
+++ b/mz-common/mz-common-redis/pom.xml
@@ -38,6 +38,10 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.17.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
