fix(mz-common-security): 优化代码

--- a/mz-common/mz-common-security/pom.xml
+++ b/mz-common/mz-common-security/pom.xml
@@ -24,6 +24,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.mz.common.constant</groupId>
+            <artifactId>mz-common-constant</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.mz.common.redis</groupId>
             <artifactId>mz-common-redis</artifactId>
             <version>0.0.1-SNAPSHOT</version>
