--- a/mz-auth/pom.xml
+++ b/mz-auth/pom.xml
@@ -50,7 +50,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.xiaozheng</groupId>
+            <groupId>com.mz.common.encrypt</groupId>
             <artifactId>mz-common-encrypt</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
