--- a/mz-common/mz-common-core/pom.xml
+++ b/mz-common/mz-common-core/pom.xml
@@ -33,6 +33,14 @@
             <groupId>com.mz.common.utils</groupId>
             <artifactId>mz-common-utils</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mz.common.constant</groupId>
+            <artifactId>mz-common-constant</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <!--swagger 注解依赖-->
@@ -40,6 +48,7 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
             <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
 
 
@@ -52,10 +61,14 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
+            <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
+            <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
