fix(mz-common-feign): 优化代码

--- a/mz-common/mz-common-feign/pom.xml
+++ b/mz-common/mz-common-feign/pom.xml
@@ -20,6 +20,8 @@
             <groupId>com.mz.common.core</groupId>
             <artifactId>mz-common-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
